<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e8f0f0"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/abc_ab_bottom_solid_dark_holo"
        android:padding="12dip" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:orientation="horizontal" >

          <ImageView 
                    android:id="@+id/back"
                    android:layout_width="30dp" 
    				android:layout_height="30dp" 
    				android:src="@drawable/icon"
                    />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/change"
                android:textColor="@color/lightgray"
                android:textSize="18dp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/login_input"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_pass"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:hint="@string/input_new"
                android:inputType="textVisiblePassword"
                android:textColor="#505050"
                android:textCursorDrawable="@null"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/divider_horizontal_line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="新密码 "
                android:textColor="#000000"
                android:textSize="15sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/passrepeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:hint="@string/input_again"
                android:textColor="@color/black"
                android:inputType="textVisiblePassword"
                android:textCursorDrawable="@null"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/change"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/main"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/register_button_select"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignLeft="@+id/main"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="66dp"
        android:text="@string/new_pass" 
        android:textColor="@color/black"
        />

</RelativeLayout>